<resources>
    <string name="app_name">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="address">address</string>
    <string name="location">location</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="website">website</string>
    <string name="unknown">unknown... .. .</string>
    <string name="distance">distance:</string>
    <string-array name="place_types_array">
        <item>atm</item>
        <item>bank</item>
        <item>bar</item>
        <item>cafe</item>
        <item>gym</item>
        <item>hospital</item>
        <item>lawyer</item>
        <item>library</item>
        <item>museum</item>
        <item>park</item>
        <item>store</item>
        <item>supermarket</item>
    </string-array>
</resources>
